--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-view-shot": "4.0.3",
     "victory-native": "^41.20.2",
     "zustand": "^5.0.8"
   },
