Add standardized repo quality tooling and CI/CD improvements
Implements AFixt repo quality standards (closes #6):
- Dependabot for automated dependency and GitHub Actions updates
- Security scanning workflow (npm audit, CodeQL, OWASP, license check)
- Enhanced CI with markdownlint and jscpd code duplication detection
- ESLint security rules (no-eval, no-implied-eval, no-new-func)
- Husky + lint-staged pre-commit hooks
- Markdownlint and jscpd configuration files

New devDependencies: markdownlint-cli, jscpd, husky, lint-staged

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI Quality Checks
 
 on:
   push:
@@ -6,8 +6,13 @@ on:
   pull_request:
     branches: [main, develop]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint-and-typecheck:
+    name: Lint & Format
     runs-on: ubuntu-latest
 
     steps:
@@ -32,7 +37,24 @@ jobs:
       - name: Run TypeScript type checking
         run: npm run type-check
 
+      - name: Lint Markdown
+        run: npm run lint:md
+        continue-on-error: true
+
+      - name: Check for code duplication (jscpd)
+        run: npm run lint:cpd:ci
+        continue-on-error: true
+
+      - name: Upload duplication report
+        uses: actions/upload-artifact@v4
+        with:
+          name: jscpd-report
+          path: reports/jscpd/
+          retention-days: 30
+        if: always()
+
   test:
+    name: Tests
     runs-on: ubuntu-latest
     needs: lint-and-typecheck
 
