--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "type-check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "lint:md": "markdownlint '**/*.md' --ignore node_modules",
+    "lint:cpd": "jscpd . --config .jscpd.json",
+    "lint:cpd:ci": "jscpd . --config .jscpd.json --threshold 5",
+    "security:audit": "npm audit",
+    "security:check": "npm audit --audit-level=high",
+    "prepare": "husky"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -56,11 +62,27 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-expo": "^54.0.13",
+    "jscpd": "^4.0.8",
+    "lint-staged": "^16.2.7",
+    "markdownlint-cli": "^0.47.0",
     "prettier": "^3.6.2",
     "ts-jest": "^29.4.5",
     "typescript": "~5.9.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "sh -c 'ESLINT_USE_FLAT_CONFIG=false eslint --fix \"$@\"' --",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "markdownlint"
+    ]
   },
   "private": true
 }
